# lume-app

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  build.cmd  build.sh  dev.cmd  dev.sh  lume.env.example  package-lock.json  package.json
docs/: ROADMAP.md
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: auth.rs  color.rs  config.rs  http.rs  lib.rs  lyrics.rs  spotify.rs
src/lib/: theme.css
src/routes/: +page.svelte
