[package]
name = "lume"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP to the Spotify Web API. rustls instead of native OpenSSL so the
# Windows build needs no extra system libs.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Async runtime for the OAuth loopback listener + token refresh.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
# OS keychain: Credential Manager (Windows) / Keychain (macOS). Tokens never touch the webview.
keyring = { version = "3", features = ["windows-native", "apple-native"] }
# PKCE primitives: SHA-256 challenge, base64url, CSPRNG for verifier/state.
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
# URL-encode the /authorize params and decode callback query values.
urlencoding = "2"
# Open the system browser to Spotify's consent page.
open = "5"
# Decode album art in Rust to sample its dominant color (no webview CORS taint).
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# Remember window position/size between launches.
tauri-plugin-window-state = "2"

